k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audio-analysis
  namespace: ai-music-xray
spec:
  selector:
    app: audio-analysis
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
